tests/snapshots/jsx__id_only_essential_props_are_kept.snap
---
source: tests/jsx.rs
info:
  descriptor_fields: id-only
---
import { Trans } from "@lingui/react/macro";
<Trans
id="msg.hello"
render="render"
i18n="i18n"
context="My Context"
comment="Hello World">Hello <strong>{name}</strong></Trans>

↓ ↓ ↓ ↓ ↓ ↓

import { Trans as Trans_ } from "@lingui/react";
<Trans_ {.../*i18n*/ {
    id: "msg.hello",
    values: {
        name: name
    },
    components: {
        0: <strong/>
    }
}} render="render" i18n="i18n"/>;
