tests/snapshots/jsx__jsx_multiple_directives_switching_context_mid_file.snap
---
source: tests/jsx.rs
---
import { Trans } from "@lingui/react/macro";
/* lingui-set context="header" */
const h = <Trans>Title</Trans>;
/* lingui-set context="footer" */
const f = <Trans>Copyright</Trans>;

↓ ↓ ↓ ↓ ↓ ↓

import { Trans as Trans_ } from "@lingui/react";
/* lingui-set context="header" */ const h = <Trans_ {.../*i18n*/ {
    id: "cxvq4E",
    message: "Title",
    context: "header"
}}/>;
/* lingui-set context="footer" */ const f = <Trans_ {.../*i18n*/ {
    id: "wtNRmE",
    message: "Copyright",
    context: "footer"
}}/>;
