tests/snapshots/jsx__jsx_preserve_reserved_attrs.snap
---
source: tests/jsx.rs
---
import { Trans } from "@lingui/react/macro";
const exp2 = <Trans comment="Translators Comment" context="Message Context" i18n="i18n" component={(p) => <div>{p.translation}</div>} render={(v) => v}>Refresh inbox</Trans>;

↓ ↓ ↓ ↓ ↓ ↓

import { Trans as Trans_ } from "@lingui/react";
const exp2 = <Trans_ {.../*i18n*/ {
    id: "6J8UtY",
    comment: "Translators Comment",
    message: "Refresh inbox",
    context: "Message Context"
}} i18n="i18n" component={(p)=><div>{p.translation}</div>} render={(v)=>v}/>;
