tests/snapshots/jsx__jsx_trans_with_directive_comment.snap
---
source: tests/jsx.rs
---
import { Trans } from "@lingui/react/macro";
// lingui-set comment="translator note"
const el = <Trans>Hello</Trans>;

↓ ↓ ↓ ↓ ↓ ↓

import { Trans as Trans_ } from "@lingui/react";
// lingui-set comment="translator note"
const el = <Trans_ {.../*i18n*/ {
    id: "uzTaYi",
    comment: "translator note",
    message: "Hello"
}}/>;
