tests/snapshots/jsx__jsx_trans_with_directive_id_prefix_without_explicit_id.snap
---
source: tests/jsx.rs
---
import { Trans } from "@lingui/react/macro";
/* lingui-set idPrefix="module." */
const el = <Trans>Hello</Trans>;

↓ ↓ ↓ ↓ ↓ ↓

import { Trans as Trans_ } from "@lingui/react";
/* lingui-set idPrefix="module." */ const el = <Trans_ {.../*i18n*/ {
    id: "uzTaYi",
    message: "Hello"
}}/>;
