tests/snapshots/jsx__jsx_trans_with_dynamic_id_and_id_prefix.snap
---
source: tests/jsx.rs
---
import { Trans } from "@lingui/react/macro";
/* lingui-set idPrefix="module." */
const el = <Trans id={dynId}>Hello</Trans>;

↓ ↓ ↓ ↓ ↓ ↓

import { Trans as Trans_ } from "@lingui/react";
/* lingui-set idPrefix="module." */ const el = <Trans_ {.../*i18n*/ {
    id: "uzTaYi",
    message: "Hello"
}}/>;
