tests/snapshots/jsx__jsx_trans_with_explicit_context_overrides_directive.snap
---
source: tests/jsx.rs
---
import { Trans } from "@lingui/react/macro";
/* lingui-set context="directive ctx" */
const el = <Trans context="explicit ctx">Hello</Trans>;

↓ ↓ ↓ ↓ ↓ ↓

import { Trans as Trans_ } from "@lingui/react";
/* lingui-set context="directive ctx" */ const el = <Trans_ {.../*i18n*/ {
    id: "Mxe6B4",
    message: "Hello",
    context: "explicit ctx"
}}/>;
